--- a/app/blocks/popups/popups.pug
+++ b/app/blocks/popups/popups.pug
@@ -68,6 +68,12 @@ mixin popup-fancy-close()
       rect(x="-2.43" y="6.94" width="20.23" height="1.49" transform="translate(18.55 7.68) rotate(135)")
       rect(x="-2.43" y="6.94" width="20.23" height="1.49" transform="translate(7.68 -3.18) rotate(45)")
 
+//- mixin popup-fancy-back-close()
+//-   button.fancybox-button.popup__close&attributes(attributes)(data-fancybox-close)
+//-     svg.popup__back-icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 7 11")
+//-       path(d="M5.45675 1.00004L1.71945 4.69421C1.32344 5.08565 1.32344 5.72516 1.71945 6.11661L5.56323 9.91602" stroke="black" stroke-width="2" stroke-miterlimit="10" stroke-linecap="round")
+
+
 mixin popup-close()
   button.popup__close&attributes(attributes)
     svg.popup__close-icon(xmlns="http://www.w3.org/2000/svg" viewBox="0 0 15.36 15.36")
