--- a/app/components/offer-description/offer-description-v3.pug
+++ b/app/components/offer-description/offer-description-v3.pug
@@ -88,6 +88,7 @@ mixin offer-description-v3(stable)
                 +review(item).__review
 
       +e.sidebar.nd-hide-sm
-        +offer-description-sidebar
-        +e.note prices are exclusive of VAT
+        div(data-slot-id="booking-form" data-slot-res="xl")
+          +offer-description-sidebar-v2()(data-target-slot="booking-form")
+        +advisor
     block
