--- a/app/components/offer-description/offer-description.scss
+++ b/app/components/offer-description/offer-description.scss
@@ -1519,4 +1519,19 @@
       }
     }
   }
+
+  .advisor {
+    &:not(:first-child) {
+      @include rule(
+        margin-top,
+        (
+          xl: 60px,
+          xlg: 60,
+          lg: 60,
+          md: 50,
+          sm: 0,
+        )
+      );
+    }
+  }
 }
