--- a/app/layouts/_internalIncludes.pug
+++ b/app/layouts/_internalIncludes.pug
@@ -3,6 +3,7 @@ include ../blocks/add-button/add-button
 include ../blocks/address-line/address-line
 include ../blocks/address-list/address-list
 include ../blocks/address/address
+include ../blocks/advisor/advisor
 include ../blocks/all-saved/all-saved
 include ../blocks/arrange-viewing-form/arrange-viewing-form
 include ../blocks/article/article
@@ -13,6 +14,7 @@ include ../blocks/block-check/block-check
 include ../blocks/blog-news/blog-news
 include ../blocks/blog/blog
 include ../blocks/board/board
+include ../blocks/booking-form/booking-form
 include ../blocks/box/box
 include ../blocks/boxes/boxes
 include ../blocks/breadcrumbs-form/breadcrumbs-form
@@ -167,8 +169,8 @@ include ../blocks/request-info/request-info
 include ../blocks/request-status/request-status
 include ../blocks/request-type/request-type
 include ../blocks/request/request
-include ../blocks/review/review
 include ../blocks/review-counter/review-counter
+include ../blocks/review/review
 include ../blocks/routes/routes
 include ../blocks/rs-grid/rs-grid
 include ../blocks/scroll-form/scroll-form
@@ -284,6 +286,7 @@ include ../components/popup-add-offer-tc/popup-add-offer-tc
 include ../components/popup-add-offer/popup-add-offer
 include ../components/popup-agreement/popup-agreement
 include ../components/popup-arrange-viewing/popup-arrange-viewing
+include ../components/popup-booking-form/popup-booking-form
 include ../components/popup-cancel-booking/popup-cancel-booking
 include ../components/popup-cancel-request/popup-cancel-request
 include ../components/popup-cancelation-contract/popup-cancelation-contract
@@ -342,4 +345,4 @@ include ../components/tags-map/tags-map
 include ../components/ubo-card/ubo-card
 include ../components/ui-kit/ui-kit
 include ../components/user-menu-panel/nd-user-menu-panel
-include ../components/user-menu-panel/user-menu-panel
+include ../components/user-menu-panel/user-menu-panel
