--- a/app/styles/helpers/_variables.scss
+++ b/app/styles/helpers/_variables.scss
@@ -261,6 +261,7 @@ $nd-color-map-border: #b7b7b7;
 $nd-color-border7: #ebebec;
 $nd-clear-disabled: #a8b7ba;
 $nd-avatar-text: #7bc0ff;
+$nd-color-date-hover: #e7edef;
 
 // ##########
 // Transitions
@@ -291,6 +292,10 @@ $icon-check-white: url("../images/bg/bg-check-bold-white.svg");
 $icon-check-black: url("../images/bg/bg-check-bold-black.svg");
 $icon-arrow-back: url("../images/bg/bg-arrow-back.svg");
 $icon-arrow-next: url("../images/bg/bg-arrow-next.svg");
+$icon-arrow-next-v2: url("../images/bg/bg-arrow-next-v2.svg");
+$icon-arrow-prev-v2: url("../images/bg/bg-arrow-prev-v2.svg");
+$icon-arrow-next-v2-blue: url("../images/bg/bg-arrow-next-v2-blue.svg");
+$icon-arrow-prev-v2-blue: url("../images/bg/bg-arrow-prev-v2-blue.svg");
 $icon-back-arrow: url("../images/bg/bg-back-arrow.svg");
 $icon-arrow5: url("../images/bg/arrow5.svg");
 $icon-map: url("../images/bg/bg-map.svg");
