--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -12,7 +12,7 @@
   padding-bottom: 8px;
   transition: border $ease-main, color $ease-main;
 
-  @include screen('sm') {
+  @include screen("sm") {
     @include text16;
   }
 
@@ -26,7 +26,8 @@
     font-weight: 400;
   }
 
-  &:hover,&:focus {
+  &:hover,
+  &:focus {
     border-bottom-color: $color-basic;
   }
 
@@ -58,7 +59,7 @@
   &_fz17 {
     @include text-mid;
 
-    @include screen('sm') {
+    @include screen("sm") {
       @include text15;
     }
   }
@@ -114,17 +115,17 @@
     box-sizing: border-box;
     min-height: 505px;
 
-    @include screen('lg') {
+    @include screen("lg") {
       min-height: 325px;
     }
 
-    @include screen('sm') {
+    @include screen("sm") {
       min-height: 100%;
     }
   }
 
   &_mfz12 {
-    @include screen('sm') {
+    @include screen("sm") {
       @include text12;
 
       line-height: (13 / 12);
@@ -134,7 +135,8 @@
   &_bordered {
     border: 1px solid $color-form-border;
 
-    &:focus,&:hover {
+    &:focus,
+    &:hover {
       border-color: $color-basic;
     }
 
@@ -146,7 +148,7 @@
   &_def-plchldr {
     padding: 21px 26px;
 
-    @include screen('sm') {
+    @include screen("sm") {
       padding: 12px;
     }
 
@@ -173,7 +175,7 @@
   $b: &;
 
   &:hover {
-    box-shadow: 1px 1px 8px rgba(34, 42, 46, .18);
+    box-shadow: 1px 1px 8px rgba(34, 42, 46, 0.18);
   }
 
   &__field {
@@ -184,7 +186,7 @@
     padding: 0 15px;
     max-width: calc(100% - 130px);
 
-    @include screen('bg') {
+    @include screen("bg") {
       max-width: calc(100% - 100px);
     }
 
@@ -192,7 +194,7 @@
       margin-right: auto;
       max-width: calc(100% - 166px);
 
-      @include screen('md') {
+      @include screen("md") {
         max-width: calc(100% - 100px);
       }
     }
@@ -210,7 +212,7 @@
     cursor: pointer;
     transition: border $ease-main;
 
-    @include screen('bg') {
+    @include screen("bg") {
       min-width: 50px;
       width: 50px;
     }
@@ -224,7 +226,8 @@
       border-color: $color-text-light;
     }
 
-    &::before,&::after {
+    &::before,
+    &::after {
       @include pseudo;
 
       top: 50%;
@@ -260,14 +263,14 @@
       height: 50px;
       flex: none;
 
-      @include screen('md') {
+      @include screen("md") {
         width: 50px;
         min-width: 50px;
       }
     }
 
     #{$b}.is-readonly & {
-      opacity: .2;
+      opacity: 0.2;
       pointer-events: none;
     }
   }
@@ -308,7 +311,7 @@
   }
 
   &.is-disabled {
-    opacity: .5;
+    opacity: 0.5;
     pointer-events: none;
   }
 }
@@ -344,7 +347,8 @@
     height: 100%;
     cursor: pointer;
 
-    &::before,&::after {
+    &::before,
+    &::after {
       @include pseudo;
 
       top: 50%;
@@ -357,7 +361,8 @@
       transition: background $ease-main;
     }
 
-    &:hover::before,&:hover::after {
+    &:hover::before,
+    &:hover::after {
       background-color: $color-basic-dark;
     }
 
@@ -379,7 +384,7 @@
 // Календарь
 // #####
 
-@import '../../node_modules/air-datepicker/dist/css/datepicker.css';
+@import "../../node_modules/air-datepicker/dist/css/datepicker.css";
 
 .js-datepicker {
   cursor: pointer;
@@ -391,7 +396,7 @@
   width: 250px;
   background: white;
   border: 1px solid $color-border;
-  box-shadow: 0 2px 4px rgba($color-basic, .15);
+  box-shadow: 0 2px 4px rgba($color-basic, 0.15);
   border-radius: 0;
   transition: opacity $ease-main, transform $ease-main, left 0s $ease-main;
   font-family: $font-main;
@@ -459,15 +464,17 @@
     // Цвет года в шапке
 
     i {
-      color: rgba($color-basic, .5);
+      color: rgba($color-basic, 0.5);
     }
   }
 }
 
 // Цвет ховера по ячейкам в календаре, шапке
 
-.datepicker--cell.-focus-,.datepicker--nav-action:hover,.datepicker--nav-title:hover {
-  background: rgba($color-border, .3);
+.datepicker--cell.-focus-,
+.datepicker--nav-action:hover,
+.datepicker--nav-title:hover {
+  background: rgba($color-border, 0.3);
 }
 
 // Стиль ячейки
@@ -480,43 +487,46 @@
 
   &.-current- {
     color: $color-main;
-    background: rgba($color-main, .1);
+    background: rgba($color-main, 0.1);
   }
 
   // Ховер по активной дате
 
   &.-selected-.-focus- {
-    background: rgba($color-main, .8);
+    background: rgba($color-main, 0.8);
   }
 
   // Неактивная ячейка
 
   &.-disabled- {
-    color: rgba($color-basic, .3);
+    color: rgba($color-basic, 0.3);
   }
 
   // Цвет фона активного месяца/дня
 
-  &.-selected-,&.-selected-.-current- {
+  &.-selected-,
+  &.-selected-.-current- {
     background: $color-main;
   }
 }
 
 // Цвет даты другого месяца/года
 
-.datepicker--cell-day.-other-month-,.datepicker--cell-year.-other-decade- {
-  color: rgba($color-basic, .2);
+.datepicker--cell-day.-other-month-,
+.datepicker--cell-year.-other-decade- {
+  color: rgba($color-basic, 0.2);
 
   &:hover {
-    color: rgba($color-basic, .5);
+    color: rgba($color-basic, 0.5);
   }
 }
 
 // Стили при выборе диапазона дат
 
-.datepicker--cell.-range-to-,.datepicker--cell.-range-from- {
+.datepicker--cell.-range-to-,
+.datepicker--cell.-range-from- {
   border: 0;
-  background-color: rgba($color-main, .3);
+  background-color: rgba($color-main, 0.3);
 
   &.-selected- {
     background-color: $color-main;
@@ -533,19 +543,20 @@
 
 // Стили ячеек другого месяца, находящихся в диапазоне
 
-.-in-range-.datepicker--cell-day.-other-month-,.-in-range-.datepicker--cell-year.-other-decade- {
-  background-color: rgba($color-main, .1);
-  color: rgba($color-main, .3);
+.-in-range-.datepicker--cell-day.-other-month-,
+.-in-range-.datepicker--cell-year.-other-decade- {
+  background-color: rgba($color-main, 0.1);
+  color: rgba($color-main, 0.3);
 
   &.-focus- {
-    background-color: rgba($color-main, .2);
+    background-color: rgba($color-main, 0.2);
   }
 }
 
 // Стили промежуточных ячеек в диапазоне
 
 .datepicker--cell.-in-range- {
-  background: rgba($color-main, .2);
+  background: rgba($color-main, 0.2);
   color: $color-main;
   border-radius: 0;
 
@@ -554,6 +565,454 @@
   }
 
   &.-focus- {
-    background: rgba($color-main, .3);
+    background: rgba($color-main, 0.3);
   }
+}
+
+.is-air-datepicker-open .datepicker_popup ~ .datepicker-overlay {
+  opacity: 1;
+}
+
+.datepicker_popup {
+  z-index: 100000;
+  width: auto;
+  border: none;
+  color: $nd-color-basic;
+  box-shadow: 1px 1px 1px 0 rgba(0, 0, 0, 0.03),
+    2px 2px 2px 0 rgba(0, 0, 0, 0.04), 3px 3px 3px 0 rgba(0, 0, 0, 0.02);
+  transition: opacity 0.3s ease-out;
+
+  @include rule(
+    min-width,
+    (
+      xl: 390px,
+      xlg: 390,
+      lg: 390,
+      md: 341,
+      sm: 341,
+    )
+  );
+
+  @include rule(
+    font-size,
+    (
+      xl: 15px,
+      xlg: 15,
+      lg: 15,
+      md: 15,
+      sm: 15,
+    )
+  );
+
+  @include rule(
+    border-radius,
+    (
+      xl: 3px,
+      xlg: 3,
+      lg: 3,
+      md: 3,
+      sm: 3,
+    )
+  );
+
+  @include screen("sm", max, 2) {
+    position: fixed;
+  }
+
+  &.active {
+    transition: opacity 0.3s ease-out;
+
+    @include screen("sm", max, 2) {
+      left: 50% !important;
+      top: 50% !important;
+      transform: translate3d(-50%, -50%, 0);
+    }
+  }
+
+  & ~ .datepicker-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.2);
+    z-index: 99999;
+    pointer-events: none;
+    opacity: 0;
+    transition: opacity 0.3s ease;
+  }
+
+  .is-freeze-window & {
+    position: fixed;
+  }
+
+  // Стрелочка сверху над блоком
+
+  .datepicker--pointer {
+    display: none;
+  }
+
+  // Шапка календаря
+
+  .datepicker--nav {
+    border: none;
+    @include rule(
+      padding,
+      (
+        xl: 20px 40px,
+        xlg: 20 40,
+        lg: 20 40,
+        md: 20 30,
+        sm: 20 30,
+      )
+    );
+
+    // Ячейка с заголовком месяца/года
+
+    &-title {
+      font-family: $font-stolzl;
+      font-weight: 400;
+      border-radius: 0;
+      color: $nd-color-basic;
+      transition: color $ease-main, background-color $ease-main;
+
+      &:hover {
+        background: transparent;
+        color: $nd-color-main;
+      }
+    }
+
+    // Ячейка со стрелкой
+
+    &-action {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      flex: none;
+      border-radius: 0;
+      transition: color $ease-main, background-color $ease-main;
+
+      @include rule(
+        width,
+        (
+          xl: 40px,
+          xlg: 40,
+          lg: 40,
+          md: 35,
+          sm: 35,
+        )
+      );
+
+      @include rule(
+        height,
+        (
+          xl: 40px,
+          xlg: 40,
+          lg: 40,
+          md: 35,
+          sm: 35,
+        )
+      );
+
+      &:hover {
+        background: transparent;
+      }
+
+      svg {
+        display: block;
+        width: 100%;
+        height: 100%;
+        background-repeat: no-repeat;
+        background-position: 50% 50%;
+
+        @include rule(
+          background-size,
+          (
+            xl: 7px 10px,
+            xlg: 7 10,
+            lg: 7 10,
+            md: 7 10,
+            sm: 7 10,
+          )
+        );
+      }
+
+      // Цвет стрелок
+      path {
+        display: none;
+        visibility: hidden;
+        stroke: $nd-color-basic;
+      }
+
+      &[data-action="prev"] svg {
+        background-image: $icon-arrow-prev-v2;
+      }
+
+      &[data-action="next"] svg {
+        background-image: $icon-arrow-next-v2;
+      }
+
+      &[data-action="prev"]:hover svg {
+        background-image: $icon-arrow-prev-v2-blue;
+      }
+
+      &[data-action="next"]:hover svg {
+        background-image: $icon-arrow-next-v2-blue;
+      }
+
+      &.-disabled- {
+        visibility: visible;
+        opacity: 0.3;
+        pointer-events: none;
+        cursor: not-allowed;
+      }
+    }
+  }
+
+  .datepicker--content {
+    padding: 0;
+    margin: 0 auto;
+    box-sizing: border-box;
+
+    @include rule(
+      padding,
+      (
+        xl: 2px 37px 40px,
+        xlg: 2 37 40,
+        lg: 2 37 40,
+        md: 2 30 30,
+        sm: 2 30 30,
+      )
+    );
+
+    @include rule(
+      max-width,
+      (
+        xl: 390px,
+        xlg: 390,
+        lg: 390,
+        md: 341,
+        sm: 341,
+      )
+    );
+  }
+
+  .datepicker--days-names {
+    margin: 0;
+
+    @include rule(
+      gap,
+      (
+        xl: 6px,
+        xlg: 6,
+        lg: 6,
+        md: 6,
+        sm: 6,
+      )
+    );
+  }
+
+  .datepicker--day-name {
+    text-transform: capitalize;
+    color: $nd-color-gray-text;
+    letter-spacing: -0.02em;
+
+    @include rule(
+      font-size,
+      (
+        xl: 11px,
+        xlg: 11,
+        lg: 11,
+        md: 11,
+        sm: 11,
+      )
+    );
+
+    @include rule(
+      width,
+      (
+        xl: 40px,
+        xlg: 40,
+        lg: 40,
+        md: 35,
+        sm: 35,
+      )
+    );
+
+    @include rule(
+      height,
+      (
+        xl: 30px,
+        xlg: 30,
+        lg: 30,
+        md: 30,
+        sm: 30,
+      )
+    );
+  }
+
+  .datepicker--cells {
+    @include rule(
+      gap,
+      (
+        xl: 6px,
+        xlg: 6,
+        lg: 6,
+        md: 6,
+        sm: 6,
+      )
+    );
+  }
+
+  // Стиль ячейки
+
+  .datepicker--cell {
+    border-radius: 50%;
+    flex: none;
+    transition: color $ease-main, background-color $ease-main;
+
+    @include rule(
+      width,
+      (
+        xl: 40px,
+        xlg: 40,
+        lg: 40,
+        md: 35,
+        sm: 35,
+      )
+    );
+
+    @include rule(
+      height,
+      (
+        xl: 40px,
+        xlg: 40,
+        lg: 40,
+        md: 35,
+        sm: 35,
+      )
+    );
+
+    // Цвет сегодняшнего даты/месяца
+
+    &.-current- {
+      font-weight: 700;
+      color: $nd-color-basic;
+      background: transparent;
+    }
+
+    &:hover {
+      background: $nd-color-date-hover;
+    }
+    // Ховер по активной дате
+
+    &.-selected-.-focus- {
+      color: $nd-color-basic;
+      background: $nd-color-date-hover;
+    }
+
+    // Неактивная ячейка
+
+    &.-disabled- {
+      pointer-events: none;
+    }
+
+    &.-disabled-,
+    &.-other-month {
+      color: $nd-color-gray-text;
+    }
+
+    // Цвет фона активного месяца/дня
+
+    &.-selected-,
+    &.-selected-.-current- {
+      color: $nd-color-basic-light;
+      background: $nd-color-main;
+    }
+
+    &-month,
+    &-year {
+      @include rule(
+        width,
+        (
+          xl: 74px,
+          xlg: 74,
+          lg: 74,
+          md: 70,
+          sm: 70,
+        )
+      );
+
+      @include rule(
+        border-radius,
+        (
+          xl: 20px,
+          xlg: 20,
+          lg: 20,
+          md: 18,
+          sm: 18,
+        )
+      );
+    }
+
+    // Цвет даты другого месяца/года
+
+    &-day.-other-month-,
+    &-year.-other-decade- {
+      color: $nd-color-gray-text;
+
+      &:hover {
+        color: $nd-color-gray-text;
+      }
+
+      &.-selected- {
+        color: $nd-color-basic-light;
+        background: $nd-color-main;
+      }
+    }
+
+    &.-range-to-,
+    &.-range-from- {
+      border: 0;
+      border-radius: 50%;
+      background-color: transparent;
+
+      &:hover {
+        color: $nd-color-gray-text;
+      }
+
+      &.-selected- {
+        background-color: $nd-color-main;
+        color: $nd-color-basic-light;
+      }
+    }
+
+    &.-in-range- {
+      background: $nd-color-date-hover;
+      border-radius: 0;
+
+      &.-current- {
+        font-weight: 700;
+      }
+
+      &.-focus- {
+        background: $nd-color-main;
+        color: $nd-color-basic-light;
+      }
+    }
+  }
+
+  // Стили ячеек другого месяца, находящихся в диапазоне
+
+  .-in-range-.datepicker--cell-day.-other-month-,
+  .-in-range-.datepicker--cell-year.-other-decade- {
+    background-color: $nd-color-date-hover;
+
+    &.-focus- {
+      background-color: $nd-color-main;
+      color: $nd-color-basic-light;
+    }
+  }
+
+  // Стили промежуточных ячеек в диапазоне
 }
