fixes for datepicker and added version single offer page for daypass

--- a/app/blocks/booking-form/booking-form.pug
+++ b/app/blocks/booking-form/booking-form.pug
@@ -4,7 +4,7 @@ mixin booking-form()
       +e.title Date and time
       +e.row
         +nd-form-box('Date')._sm-h50._bg-white._select
-          +nd-input()._sm-h50.js-datepicker(type="text" name="date" data-date-format="M dd, yyyy" data-class-list="datepicker_popup")
+          +nd-input()._sm-h50.js-datepicker(type="text" name="date" readonly data-date-format="M dd, yyyy" data-class-list="datepicker_popup")
       +e.row_datetime
         +nd-form-box('Start time', 'div')._sm-h50._bg-white
           +nd-select().js-nd-select(name="start" data-choices-classes="nd-choices_sm-h50")
