--- a/app/blocks/form-elements/form-elements.scss
+++ b/app/blocks/form-elements/form-elements.scss
@@ -675,6 +675,7 @@
       border-radius: 0;
       color: $nd-color-basic;
       transition: color $ease-main, background-color $ease-main;
+      pointer-events: none;
 
       &:hover {
         background: transparent;
