--- a/app/pages/newest/sitemap/redesign-sitemap.pug
+++ b/app/pages/newest/sitemap/redesign-sitemap.pug
@@ -43,6 +43,7 @@ block content
               +page-title February 2024
             +e.list
               +nd-link(href="single-offer-v2.html") Spacepool - Single Offer Page (single-offer-v2.html)
+              +nd-link(href="single-offer-dp-v2.html") Spacepool - Single Offer Page Daypass (single-offer-dp-v2.html)
 
           +e.group
             +e.head
